--- a/index_heap.html
+++ b/index_heap.html
@@ -40,8 +40,8 @@
 </ul>
 <p>Resources</p>
 <ul>
-<li>Patrick Lester.  "<a href='http://www.policyalmanac.org/games/aStarTutorial.htm'>A* Pathfinding for Beginners</a>."</li>
-<li>Patrick Lester. "<a href='http://www.policyalmanac.org/games/binaryHeaps.htm'>Using Binary Heaps in A* Pathfinding</a>."</li>
+<li>Patrick Lester.  "<a href='http://www.policyalmanac.org/games/aStarTutorial.htm'>A* Pathfinding for Beginners</a>"</li>
+<li>Patrick Lester. "<a href='http://www.policyalmanac.org/games/binaryHeaps.htm'>Using Binary Heaps in A* Pathfinding</a>"</li>
 <li>Contact author: Florin Alexandrescu (geotangents at gmail) </li>
 </ul>
 
