--- a/index_heap.html
+++ b/index_heap.html
@@ -4,6 +4,12 @@
 <title>Path finding on an elevation model</title>
 <script src="arrays.js" type="text/javascript"></script> 
 <script src="path.js" type="text/javascript"></script> 
+<script>
+window.onload = function(){
+    PATH.init({canvas: "myCanvas", image:"deer_ridge.png"});
+}
+</script>
+
 </head>
 
 <body>
@@ -11,11 +17,13 @@
 <div style="float:left; padding-left:10px;">
     <b>Start:</b> <span id="startDiv">Click elevation model to set start point</span><br>
     <b>End:</b> <span id="endDiv">Click elevation model to set end point</span><br>
-    <b>Path:</b> <span id="pathDiv"><a href='javascript:checkInputs()'>Click here to find path</a></span>
+    <b>Path:</b> <span id="pathDiv"></span><br>
+    <button id="findPathBtn">Find path</button><br>
+    <button id="removePathsBtn">Remove paths</button>
 </div>
 <div style="clear:both">Position: <span id="posDiv"></span></div>
 <p>About</p>
-<ul><li>The purpose of this aplication is to find the easiest way to hike from a starting point to an ending point over a given terrain.</li>
+<ul><li>The purpose of this application is to find the easiest way to hike from a starting point to an ending point over a given terrain.</li>
 <li>Moving from one pixel to a neighboring pixel E,N,S or W costs 2 points.</li>
 <li>Moving to a neighbor NW,NE,SW,or SE costs 3 points.</li>
 <li>The absolute difference in pixel values, which represent elevation, is multiplied by 5.</li>
@@ -24,10 +32,10 @@
 <ul>
 <li>Works fastest in Chrome. Will not even load in IE7 or earlier.</li>
 <li>Image from the USGS 1/3-Arc Second National Elevation Dataset. And we're losing a lot of detail going from a TIFF to a PNG. This algorithm will work on any image loaded into the canvas element, but the results might be funky when using a color image or any terrain with shaded relief.</li>
-<li>Use a binary heap to quickly get the item with the lowest f-score.  This is a tremenduous improvement over looping over arrays.</li> 
+<li>Use a binary heap to quickly get the item with the lowest f-score.  This is a tremendous improvement over looping over arrays.</li> 
 <li>Use objects to store lists for quick lookup.  Again, much faster than looping over arrays. </li>
 <li>Use a stored image data instead of getImageData</li>
-<li>Modify the binary heap methods to track item indexes whenver items are switched around.  This keeps us from using an expensive array lookup when items need to be updated</li> 
+<li>Modify the binary heap methods to track item indexes whenever items are switched around.  This keeps us from using an expensive array lookup when items need to be updated</li> 
 <li>Use the Firebug profiler to see which functions are taking too long, and focus improvements on those</li>
 </ul>
 <p>Questions</p>
@@ -44,6 +52,7 @@
 <li>Patrick Lester. "<a href='http://www.policyalmanac.org/games/binaryHeaps.htm'>Using Binary Heaps in A* Pathfinding</a>"</li>
 <li>Contact author: Florin Alexandrescu (geotangents at gmail) </li>
 </ul>
+
 
 </body>
 
