Put the binary heap logic in its own file.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Path finding on an elevation model</title>
+<script src="binary_heap.js" type="text/javascript"></script> 
 <script src="path.js" type="text/javascript"></script> 
 <script>
 window.onload = function(){
