--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="path-finder">
 <head>
 <title>Path finding on an elevation model</title>
+<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 <script src="binary_heap.js" type="text/javascript"></script> 
 <script src="path.js" type="text/javascript"></script> 
+<script src="app.js" type="text/javascript"></script> 
 <link rel="stylesheet" type="text/css" href="style.css">
 <script>
 window.onload = function(){
@@ -27,7 +29,13 @@ window.onload = function(){
 
 </head>
 
-<body>
+<body ng-controller="canvasCtrl">
+    Position {{mouseMovePosition | pointDisplay}}<br>
+    Start {{startPt | pointDisplay}}<br>
+    End {{endPt | pointDisplay}}<br>
+    <path-finder-canvas src="28497307.png" width="341" height="487"></path-finder-canvas>
+<br>
+
 <canvas id="myCanvas" width="453" height="373">Your browser does not support HTML5 canvas.<br>For ideal performance, use Chrome.<br><br></canvas>
 <div class="directions">
     <b>Start:</b> <span id="startDiv">Click elevation model to set start point</span><br>
@@ -36,14 +44,7 @@ window.onload = function(){
     <button id="findPathBtn">Find path</button><br>
     <button id="removePathsBtn">Remove paths</button>
 </div>
-<div class="position">Position: <span id="posDiv"></span></div>
-<p>About</p>
-<ul><li>The purpose of this application is to find the easiest way to hike from a starting point to an ending point over a given terrain.</li>
-<li>Moving from one pixel to a neighboring pixel E,N,S or W costs 2 points.</li>
-<li>Moving to a neighbor NW,NE,SW,or SE costs 3 points.</li>
-<li>The absolute difference in pixel values, which represent elevation, is multiplied by 5.</li>
-<li>Author: Florin Alexandrescu (geotangents at gmail) </li>
-</ul>
+<div class="position">Position: {{hi}}<span id="posDiv"></span></div>
 
 
 </body>
