Reorganize files. WIP canvas service.

--- a/tests.html
+++ b/tests.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
 
   <!-- include source files here... -->
-  <script src="binary_heap.js"></script> 
+  <script src="app/binary_heap.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/binary_heap_spec.js"></script>
