--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
 <title>Path finding on an elevation model</title>
 <script type="text/javascript" src="bower_components/angular/angular.js"></script>
-<script src="binary_heap.js" type="text/javascript"></script> 
-<script src="path.js" type="text/javascript"></script> 
-<script src="app.js" type="text/javascript"></script>
-<script src="astar.js" type="text/javascript"></script>
+<script src="app/binary_heap.js" type="text/javascript"></script>
+<script src="app/path.js" type="text/javascript"></script>
+<script src="app/astar.js" type="text/javascript"></script>
+<script src="app/canvas.js" type="text/javascript"></script>
+<script src="app/app.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body ng-controller="canvasCtrl">
-    Position {{mouseMovePosition | pointDisplay}}<br>
-    Start {{startPt | pointDisplay}}<br>
-    End {{endPt | pointDisplay}}<br>
-    <path-finder-canvas src="deer_ridge.png"></path-finder-canvas>
+<body>
+
+<path-finder-canvas src="images/dolly.png"></path-finder-canvas>
+
+
+
+
 
 </body>
 
