Add convenience methods on canvas context object.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <title>Path finding on an elevation model</title>
 <script type="text/javascript" src="bower_components/angular/angular.js"></script>
 <script src="app/binary_heap.js" type="text/javascript"></script>
-<script src="app/path.js" type="text/javascript"></script>
 <script src="app/astar.js" type="text/javascript"></script>
 <script src="app/canvas.js" type="text/javascript"></script>
 <script src="app/app.js" type="text/javascript"></script>
@@ -13,7 +12,9 @@
 
 <body>
 
-<path-finder-canvas src="images/dolly.png"></path-finder-canvas>
+
+
+<path-finder-canvas src="images/deer_ridge.png"></path-finder-canvas>
 
 
 
