--- a/app/path-finder-canvas.html
+++ b/app/path-finder-canvas.html
@@ -1,4 +1,4 @@
-Position {{mouseMovePosition | pointDisplay}}<br>
+Position {{mousePosition | pointDisplay}}<br>
 Start {{startPt | pointDisplay}}<br>
 End {{endPt | pointDisplay}}<br>
 <canvas></canvas><br>
