--- a/index.html
+++ b/index.html
@@ -2,23 +2,16 @@
 <html ng-app="pathFinder">
 <head>
 <title>Path finding on an elevation model</title>
-<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.27/angular.min.js"></script>
 <script src="app/binary_heap.js" type="text/javascript"></script>
 <script src="app/astar.js" type="text/javascript"></script>
 <script src="app/canvas.js" type="text/javascript"></script>
 <script src="app/app.js" type="text/javascript"></script>
-<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 
-
-
 <path-finder-canvas src="images/deer_ridge.png"></path-finder-canvas>
-
-
-
-
 
 </body>
 
